Fix T74236: Golden ratio in camera composition guides is not working

Caused by 52da1b6e2b54 (where it was switched from a value to a define -
but the define was wrong...)